--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <header>
                 <h1>HTML: HyperText Markup Language</h1>
                 <img src="img/john-doe.jpg" alt="john-doe"width=90>
-                <p>Posted by John Doe on Monday, January 9th 2024</p>
+                <p id="author">Posted by John Doe on Monday, January 9th 2024</p>
                 <img src="img/html-code.jpeg" alt="html-code"
                 width="512">
             </header>
@@ -134,6 +134,33 @@
                 You can learn more from <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" >MDN Web Docs</a>.
             </p>
         </article>
+
+        <aside>
+            <h4>Related Posts</h4>
+            <ul class="related">
+                <li>
+                    <img src="img/related-1.jpg" alt="related-1" width="100" height="100">
+                    <a href="#">HTML Elements</a>
+                    <p class="related-author">
+                        John Doe
+                    </p>
+                </li>
+                <li>
+                    <img src="img/related-2.jpg" alt="related-2" width="100" height="100">
+                    <a href="#">HTML Attributes</a>
+                    <p class="related-author">
+                        Jane Doe
+                    </p>
+                </li>
+                <li>
+                    <img src="img/related-3.jpg" alt="related-3" width="100" height="100">
+                    <a href="#">CSS Basics</a>
+                    <p class="related-author">
+                        John Doe
+                    </p>
+                </li>
+            </ul>
+        </aside>
         
         <!-- Page Footer -->
         <footer>Copyright &copy; DEVELOPER POSTS</footer>
