--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
         </aside>
         
         <!-- Page Footer -->
-        <footer>Copyright &copy; DEVELOPER POSTS</footer>
+        <footer>
+            <p id="copyright">
+                Copyright &copy; DEVELOPER POSTS
+            </p>
+        </footer>
     </body>
 </html>
