--- a/index.html
+++ b/index.html
@@ -1,172 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HTML & CSS COURSE</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <!-- Page Header  -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML & CSS Course</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="main-header">
+        <h2>
+            Developer Posts
+        </h2>
+        <nav>
+            <a href="blog.html">Blog</a>
+            <a href="#">Tasks</a>
+            <a href="#">Flexbox</a>
+            <a href="#">CSS Grid</a>
+        </nav>
+    </header>
+    <article>
         <header>
-            <h2>DEVELOPER POSTS</h2>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="#">Tasks</a>
-                <a href="#">Flexbox</a>
-                <a href="#">CSS Grid</a>
-            </nav>
+            <h1>
+                HTML: HyperText markup language
+            </h1>
+            <img src="img/john-doe.jpg" alt="John Doe" height="64">
+            <p id="author">
+                Posted by <strong>John Doe</strong> on Monday, January 9th 2024
+            </p>
+            <img class="img-post" src="img/html-code.jpeg" alt="html codes" width="512">
         </header>
+        <h3>
+            What is HTML?
+        </h4>
+        <p>
+            HTML ( <em>HyperText Markup Language</em> ) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation ( <em>CSS</em> ) or functionality/behavior ( <em>JavaScript</em> ).
+        </p>
+        <p>
+            HTML is a markup language that defines the structure of your content. HTML consists of a series of elements, which you use to enclose, or wrap, different parts of the content to make it appear a certain way, or act a certain way. The enclosing tags can make a word or image hyperlink to somewhere else, can italicize words, can make the font bigger or smaller, and so on.
+        </p>
+        <h3>
+            Anatomy of an HTML element
+        </h3>
+        <ol>
+            <li>
+                The opening tag
+            </li>
+            <li>
+                The closing tag
+            </li>
+            <li>
+                The content
+            </li>
+            <li>
+                The element
+            </li>
+        </ol>
+        <img src="img/html-anatomy.png" alt="Anatomy of an HTML element" width="512">
+        <p>
+            Elements can also have attributes that look like the following:
+        </p>
+        <img src="img/html-attribute.png" alt="HTML element attributes" width="512">
+        <p>
+            Attributes contain extra information about the element that you don't want to appear in the actual content. Here, class is the attribute name and editor-note is the attribute value. The class attribute allows you to give the element a non-unique identifier that can be used to target it (and any other elements with the same class value) with style information and other things. Some attributes have no value, such as required.
+        </p>
+        <ul>
+            <li>
+                A space between it and the element name (or the previous attribute, if the element already has one or more attributes).
+            </li>
+            <li>
+                The attribute name followed by an equal sign.
+            </li>
+            <li>
+                The attribute value wrapped by opening and closing quotation marks.
+            </li>
+        </ul>
+        <p>
+            You can learn more from <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs</a>.
+        </p>
+    </article>
 
-        <!-- Page Article -->
-        <article>
-            <!-- Article Header -->
-            <header>
-                <h1>HTML: HyperText Markup Language</h1>
-                <img src="img/john-doe.jpg" alt="john-doe"width=90>
-                <p id="author">Posted by John Doe on Monday, January 9th 2024</p>
-                <img src="img/html-code.jpeg" alt="html-code"
-                width="512">
-            </header>
+    <aside>
+        <h4>Related Posts</h4>
+        <ul class="related">
+            <li>
+                <img src="img/related-1.jpg" alt="related-1" width="100" height="100">
+                <a href="#">HTML Elements</a>
+                <p class="related-author">
+                    John Doe
+                </p>
+            </li>
+            <li>
+                <img src="img/related-2.jpg" alt="related-2" width="100" height="100">
+                <a href="#">HTML Attributes</a>
+                <p class="related-author">
+                    Jane Doe
+                </p>
+            </li>
+            <li>
+                <img src="img/related-3.jpg" alt="related-3" width="100" height="100">
+                <a href="#">CSS Basics</a>
+                <p class="related-author">
+                    John Doe
+                </p>
+            </li>
+        </ul>
+    </aside>
 
-            <!-- Article Body -->
-            <h3>What is HTML?</h3>
-            <p>
-                HTML ( HyperText Markup Language ) is the most basic building block of the Web. It defines the meaning and structure of web content.Other technologies besides HTML are generally used to describe a web page's appearance/presentation ( CSS ) or functionality/behavior ( JavaScript ).
-            </p>
-            <p>
-                HTML is a markup language that defines the structure of your content. HTML consists of a series of elements, which you use to enclose, or wrap, different parts of the content to make it appear a certain way, or act a certain way. The enclosing tags can make a word or image hyperlink to somewhere else, can italicize words, can make the font bigger or smaller, and so on.
-            </p>
-            <h3>Anatomy of an HTML element</h3>
-            <ol>
-                <li>The opening tag</li>
-                <li>The closing tag</li>
-                <li>The content</li>
-                <li>The element</li>
-            </ol>
-            <img src="img/html-anatomy.png" alt="html-anatomy" width="512">
-            <p>Elements can also have attributes that look like the following:</p>
-            <img src="img/html-attribute.png" alt="html-attribute" width="512">
-            <p>
-                Attributes contain extra information about the element that you don't want to appear in the actual content. Here, class is the attribute name and editor-note is the attribute value. The class attribute allows you to give the element a non-unique identifier that can be used to target it (and any other elements with the same class value) with style information and other things. Some attributes have no value, such as required.
-            </p>
-            <ul>
-                <li>
-                    A space between it and the element name (or the previous attribute, if the element already has one or more attributes).
-                </li>
-                <li>The attribute name followed by an equal sign.</li>
-                <li>
-                    The attribute value wrapped by opening and closing quotation marks.
-                </li>
-            </ul>
-            <p>
-                You can learn more from <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" >MDN Web Docs</a>.
-            </p>
-        </article>
-        
-        <!-- Page Footer -->
-        <footer>Copyright &copy; DEVELOPER POSTS</footer>
-    </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HTML & CSS COURSE</title>
-    </head>
-    <body>
-        <!-- Page Header  -->
-        <header>
-            <h2>DEVELOPER POSTS</h2>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="#">Tasks</a>
-                <a href="#">Flexbox</a>
-                <a href="#">CSS Grid</a>
-            </nav>
-        </header>
-
-        <!-- Page Article -->
-        <article>
-            <!-- Article Header -->
-            <header>
-                <h1>HTML: HyperText Markup Language</h1>
-                <img src="img/john-doe.jpg" alt="john-doe"width=90>
-                <p>Posted by John Doe on Monday, January 9th 2024</p>
-                <img src="img/html-code.jpeg" alt="html-code"
-                width="512">
-            </header>
-
-            <!-- Article Body -->
-            <h3>What is HTML?</h3>
-            <p>
-                HTML ( HyperText Markup Language ) is the most basic building block of the Web. It defines the meaning and structure of web content.Other technologies besides HTML are generally used to describe a web page's appearance/presentation ( CSS ) or functionality/behavior ( JavaScript ).
-            </p>
-            <p>
-                HTML is a markup language that defines the structure of your content. HTML consists of a series of elements, which you use to enclose, or wrap, different parts of the content to make it appear a certain way, or act a certain way. The enclosing tags can make a word or image hyperlink to somewhere else, can italicize words, can make the font bigger or smaller, and so on.
-            </p>
-            <h3>Anatomy of an HTML element</h3>
-            <ol>
-                <li>The opening tag</li>
-                <li>The closing tag</li>
-                <li>The content</li>
-                <li>The element</li>
-            </ol>
-            <img src="img/html-anatomy.png" alt="html-anatomy" width="512">
-            <p>Elements can also have attributes that look like the following:</p>
-            <img src="img/html-attribute.png" alt="html-attribute" width="512">
-            <p>
-                Attributes contain extra information about the element that you don't want to appear in the actual content. Here, class is the attribute name and editor-note is the attribute value. The class attribute allows you to give the element a non-unique identifier that can be used to target it (and any other elements with the same class value) with style information and other things. Some attributes have no value, such as required.
-            </p>
-            <ul>
-                <li>
-                    A space between it and the element name (or the previous attribute, if the element already has one or more attributes).
-                </li>
-                <li>The attribute name followed by an equal sign.</li>
-                <li>
-                    The attribute value wrapped by opening and closing quotation marks.
-                </li>
-            </ul>
-            <p>
-                You can learn more from <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" >MDN Web Docs</a>.
-            </p>
-        </article>
-
-        <aside>
-            <h4>Related Posts</h4>
-            <ul class="related">
-                <li>
-                    <img src="img/related-1.jpg" alt="related-1" width="100" height="100">
-                    <a href="#">HTML Elements</a>
-                    <p class="related-author">
-                        John Doe
-                    </p>
-                </li>
-                <li>
-                    <img src="img/related-2.jpg" alt="related-2" width="100" height="100">
-                    <a href="#">HTML Attributes</a>
-                    <p class="related-author">
-                        Jane Doe
-                    </p>
-                </li>
-                <li>
-                    <img src="img/related-3.jpg" alt="related-3" width="100" height="100">
-                    <a href="#">CSS Basics</a>
-                    <p class="related-author">
-                        John Doe
-                    </p>
-                </li>
-            </ul>
-        </aside>
-        
-        <!-- Page Footer -->
-        <footer>
-            <p id="copyright">
-                Copyright &copy; DEVELOPER POSTS
-            </p>
-        </footer>
-    </body>
+    <footer>
+        <p id="copyright" class="copyright text">
+            Copyright &copy; by Developer Posts
+        </p>
+    </footer>
+</body>
 </html>
